team-app/main/default/objects/Cockpit_Loss_Root__mdt/Cockpit_Loss_Root__mdt.object-meta.xml
<CustomObject>
    <label>Cockpit Loss Root</label>
    <pluralLabel>Cockpit Loss Roots</pluralLabel>
    <description>Maps Opportunity.Lost_Reason__c to never-real vs worked-loss for Win Rate Truth. Unmapped reasons are worked losses and must be surfaced.</description>
</CustomObject>