team-app/main/default/objects/Cockpit_Loss_Root__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Inactive rows are ignored so a reason can be retired without delete.</description>
    <inlineHelpText>Inactive rows are ignored so a reason can be retired without delete.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>