team-app/main/default/objects/Cockpit_Loss_Root__mdt/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <description>Never_Real (including Ghosted under Euna canon) or Worked. Ghosted can flip via winrate.exclude.ghosted.</description>
    <inlineHelpText>Never_Real or Worked. Ghosted follows winrate.exclude.ghosted (default exclude).</inlineHelpText>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never_Real</fullName>
                <label>Never real</label>
            </value>
            <value>
                <fullName>Worked</fullName>
                <default>true</default>
                <label>Worked loss</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>