team-app/main/default/objects/Cockpit_Loss_Root__mdt/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <description>Exact Opportunity.Lost_Reason__c picklist value. Blank reasons are never-real in code, not here.</description>
    <inlineHelpText>Exact Opportunity.Lost_Reason__c picklist value. Blank reasons are never-real in code, not here.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>