team-app/main/default/objects/Cockpit_Loss_Root__mdt/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <description>Optional root token (QUAL, DUPE, VALUE, FIT, COMP, TIMING, PAPER, EB, ENGAGE) for mapping honesty.</description>
    <inlineHelpText>Optional root token (QUAL, DUPE, VALUE, FIT, COMP, TIMING, PAPER, EB, ENGAGE) for mapping honesty.</inlineHelpText>
    <type>Text</type>
    <length>40</length>
</CustomField>